# sandtris

./: .gitignore  README.md  main.py  pygbag.ini  pyproject.toml  pyrightconfig.json  test_outline.py
.github/workflows/: pygbag.yml  test.yml
data/: high_score.json  settings.json
sandtris/: main.py  train.py
sandtris/ai/: base.py  dqn.py  dqn_agent.py  env.py  replay.py
sandtris/core/: config.py  engine.py  grid.py  pieces.py
sandtris/render/: game_over_screen.py  gameplay_screen.py  high_scores_screen.py  how_to_play_screen.py  main_menu_screen.py  pause_screen.py  settings_screen.py  ui.py  vs_screen.py
sandtris/runners/: pygame_runner.py
tests/core/: test_config.py  test_engine.py  test_grid.py  test_pieces.py
tests/runners/: test_high_score_merge.py  test_persistence.py
